syntax = "proto3";
import "Proto/requestmessages.proto";
import "Proto/responsemessages.proto";

option csharp_namespace = "EducationalInstitutionAPI.Proto";

service Query{
	rpc GetEducationalInstitutionByID(EducationalInstitutionGetByIdRequest) returns (EducationalInstitutionGetResponse);
}